# laraframe

./: .gitignore  README.md  components.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
mcp-server/: claude-config-example.json  package.json  pnpm-lock.yaml
mcp-server/src/: cloud-client.ts  forge-client.ts  index.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: cloud.rs  forge.rs  mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/keychain/: mod.rs
src/components/: ErrorBoundary.tsx
src/components/cloud/: AppList.tsx  EnvHeader.tsx  EnvList.tsx
src/components/cloud/widgets/: BackgroundProcessesWidget.tsx  CachesWidget.tsx  CommandsWidget.tsx  DatabasesWidget.tsx  DeploymentsWidget.tsx  DomainsWidget.tsx  EditDialog.tsx  EnvVariablesWidget.tsx  InfoWidget.tsx  InstancesWidget.tsx  LogsWidget.tsx  MetricsWidget.tsx  StorageWidget.tsx  WebSocketAppsWidget.tsx  WebSocketsWidget.tsx
src/components/forge/: ServerDetail.tsx  ServerInfoBar.tsx  ServerList.tsx  SiteHeader.tsx  SiteList.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/settings/: MCPSetup.tsx
src/components/ui/: sheet.tsx  sonner.tsx
src/hooks/: useAutoUpdate.ts  useKeyboardShortcuts.ts  useLazyLoad.ts
src/lib/: cache.ts  debounce.ts  help-content.ts  helpers.ts  i18n.ts  tauri.ts
src/pages/: AiAssistant.tsx  CloudPage.tsx  Dashboard.tsx  Forge.tsx  Nightwatch.tsx  SettingsPage.tsx
src/stores/: theme.ts
(+33 files in other folders)
